[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
rand = "0.8.5"
renet = "0.0.15" # Ensure this matches the version bevy_renet expects
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
local-ip-address = "0.5.6"
bevy_renet = "1.0.0"



